...
        }
    }
    
    private func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
            let result = makeResultsMessage()
            let model = AlertModel(title: "Раунд окончен!", message: result, buttonText: "Сыграть ещё раз") {
                self.restartGame()
            }
            alertPresenter.showAlert(model: model)
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
...
